--- a/source/_patterns/01-molecules/navigation/main-navigation/_main-navigation.scss
+++ b/source/_patterns/01-molecules/navigation/main-navigation/_main-navigation.scss
@@ -4,7 +4,7 @@
  */
 
 .nav--main {
-  .menu {
+  & > .menu {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
